# ft-diloco

./: .gitignore  README.md  pyproject.toml
analysis/: plot_wan.py  storm_dash.py  storm_events.py  storm_gif.py  storm_report.py  ticker.py
chaos/: faults.py
configs/train/: storm_micro_eval.yaml
docs/: cloud.md  findings-171.md  runbook.md
experiments/m2-kill-rejoin/: chaos.jsonl  netmon.jsonl  replica0.jsonl  replica1.jsonl  summary.json
experiments/m3-storm-k120-nockpt/: chaos.jsonl  netmon.jsonl  replica0.jsonl  replica1.jsonl  summary.json
experiments/m3-storm-k60-nockpt/: chaos.jsonl  netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m4-cloud-headline/: replica0.jsonl  replica1.jsonl
experiments/m4-twomachine/: replica0.jsonl  replica1.jsonl
experiments/m4-wan-1000mbit-h1/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m4-wan-1000mbit-h100/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m4-wan-100mbit-h1/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m4-wan-100mbit-h100/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m4-wan-10mbit-h1/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m4-wan-10mbit-h100/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m4-wan-50mbit-h1/: netmon.jsonl  replica0.jsonl  replica1.jsonl
scripts/: bootstrap_m0.sh  kill_run.sh  launch_lighthouse.sh  launch_storm_replica.sh  launch_worker.sh  record_gif.sh  run_m1_sweep.sh  run_m4_cloud_w4.sh  run_nstest.sh  run_storm.sh  start_recording.sh  w4.sh
scripts/cloud/: bootstrap_vast.sh  lib.sh  (+1 more)
(+6 files in other folders)
