[project]
name = "ftdiloco"
version = "0.1.0"
description = "Fault-tolerant DiLoCo: resilient low-bandwidth LLM training on commodity hardware"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7",
    "numpy>=1.26",
    "tiktoken>=0.6",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

# torchft is NOT listed here: training hosts use torchft-nightly==2026.6.10 (wheel),
# with the fork github.com/nicholicaron/torchft cloned for source reference and any
# fix branches (see docs/runbook.md).
# torchft-pin: 4157be16e7ab2b9e2471e48355eb7d87a6c0fd07 (upstream main, 2026-06-09)

[project.optional-dependencies]
prep = ["datasets>=2.19"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftdiloco"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
